# game_of_stones

./: .gitignore  CMakeLists.txt  Makefile  argparser.py  bfs.py  conspiracies.py  game_of_stones  graph.py  main.cpp  myBuild.sh  tests.sh  utils.py
.github/workflows/: pain_au_chocolat.yml
conspiracies/: chain.py  display.py  execution.py  graph_integration.py
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_1.cpp
tests/inputs/friends/: abcd_diff_n2_n3.txt  complex.txt  magic.txt  simple.txt  star-wars.txt
tests/inputs/plots/: abcd_diff_n2_n3.txt  complex.txt  magic.txt  star-wars.txt
tests/outputs/links/: magic_n-1.txt  magic_n0.txt  magic_n2.txt  subject_n-1.txt  subject_n0.txt  subject_n3.txt
tests/outputs/need to check/: star-wars_n2.txt
tests/outputs/plots/: abcd_diff_n2.txt  abcd_diff_n3.txt  complex_n2.txt  magic_n2.txt  simple_n2.txt  star-wars_n5.txt  subject_n1.txt  subject_n2.txt  subject_n3.txt
